# efw

./: Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yml
src/: allocator.rs  console.rs  lib.rs  result.rs
src/efi/: boot_services.rs  handle.rs  memory_map.rs  memory_type.rs  mod.rs  protocol.rs  result.rs  runtime_services.rs  system_table.rs
src/efi/protocols/: graphics_output.rs  mod.rs  simple_text_input.rs  simple_text_output.rs
test-runner/: Cargo.toml  run.sh
test-runner/src/: main.rs
