[package]
name = "efw"
description = "Framework for writing UEFI applications"
version = "0.2.0"
authors = ["Richard Wiedenhöft <richard@wiedenhoeft.xyz>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/richard-w/efw"

[lib]
path = "src/lib.rs"

[dependencies]
late-static = "0.4"
r-efi = "4.0"
ucs2 = "0.3"
